--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "npm install && npm run compile"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
